2011-01-21  Ilija Kocho  <ilijak@siva.com.mk>

	* src/stm32_misc.c (hal_start_clocks): Added optional calculation of
	hal_cortexm_systick_clock when 'internal' clock source is selected.

2011-01-13  John Dallaway  <john@dallaway.org.uk>

	* src/stm32_misc.c: Implement a profiling timer on TIM2.
	* cdl/hal_cortexm_stm32.cdl: Add CDL option to enable the profiling
	timer.

2011-01-13  Nick Garnett  <nickg@ecoscentric.com>

	* src/stm32_misc.c (hal_start_clocks): Correct bit clear operation
	when disabling external clock.

2009-10-26  Ross Younger  <wry@ecoscentric.com>

	* include/var_io.h: Minor corrections to the FSMC register defs.

2009-08-10  Simon Kallweit  <simon.kallweit@intefo.ch>

	* include/var_io.h: Added more register definitions for FSMC

2009-04-17  Simon Kallweit  <simon.kallweit@intefo.ch>

	* src/hal_diag.c (hal_stm32_serial_getc_timeout): Fix for higher
	baudrates. The original version lost bytes due to the long
	timeout.

2009-02-27  Simon Kallweit  <simon.kallweit@intefo.ch>

	* include/var_io.h:
	Add mask for CYGHWR_HAL_STM32_RCC_CFGR_ADCPRE.
	Fixed CYGHWR_HAL_STM32_RTC_CRL_ALRF.
	Add register definitions for ADC.
	Add additional timer registers.
	* src/stm32_mis.c:
	Moved system clock initialization into it's own function, so it can
	be called after wakeup from sleep modes.
	Added hal_stm32_timer_clock() to get current clock of timers.

2009-02-10  Chris Holgate  <chris@zynaptic.com>

	* include/var_io.h: Add mask for CYGHWR_HAL_STM32_AFIO_MAPR_SWJ.

2009-02-04  Nick Garnett  <nickg@ecoscentric.com>

	* include/var_intr.h: Various fixes to allow external interrupts
	to work.

	* include/var_io.h: Add AFIO, DMA, SPI and USB definitions.

	* src/stm32_misc.c (hal_stm32_gpio_set): Refetch bit number for
	setting pullup/down.

2008-11-24  Nick Garnett  <nickg@ecoscentric.com>

	* include/var_intr.h (CYGNUM_HAL_INTERRUPT_DMA1_CHX): Rename DMA0
	to DMA1 to match ST's numbering elsewhere.
